# SimpleClock

./: README.md  pyproject.toml
Examples/: DigitalClock.py
SimpleClock/: __init__.py  __main__.py
src/reader/: __init__.py
