# pyproject.toml

[build-system]
requires      = ["time"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleClock"
version = "1.0"
description = "A module that makes use of python's time library and simplifies it."
readme = "README.md"
authors = [{ name = "Tyler", email = "busybird15@mail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["clock", "time", "timezone"]
dependencies = [
    "time"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/BusyBird15/SimpleClock"

[project.scripts]
SimpleClock = "SimpleClock.__main__:main"
